# llmrl

./: .dockerignore  .gitignore  Dockerfile  README.md  blog_post.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
examples/: blackjack.py  cartpole.py
examples/grpo_output/: README.md
examples/grpo_output/checkpoint-8/: README.md  adapter_config.json  chat_template.jinja  rng_state.pth  scheduler.pt  trainer_state.json
llamagym/: agent.py
