[tool.poetry]
name = "llamagym"
version = "0.1.1"
description = "Fine-tune LLM agents with online reinforcement learning"
authors = ["Rohan Pandey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.9.0"
transformers = "^4.57.0"
trl = "^0.24.0"
gymnasium = "^0.29.1"
peft = "^0.17.0"
accelerate = "^1.11.0"
bitsandbytes = "^0.48.0"
textworld = "^1.6.1"
scipy = "^1.12.0"
wandb = "^0.22.0"


[tool.poetry.group.dev.dependencies]
wandb = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
